# PizzaDelivery_fastapi

./: main.py  pyproject.toml
src/pd/: auth_routes.py  database.py  models.py  order_routes.py
